Make working with the SaltStackClientConfig more typesafe